<resources>
    <string name="app_name">LatinoCommunity</string>
    <string name="title_home">Home</string>
    <string name="title_schools">Schools</string>
    <string name="title_clubs">Clubs</string>
    <string name="title_events">Events</string>
    <string name="title_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>