<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schools"
        android:icon="@drawable/baseline_school_24"
        android:title="@string/title_schools" />

    <item
        android:id="@+id/navigation_clubs"
        android:icon="@drawable/baseline_star_border_24"
        android:title="@string/title_clubs" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/baseline_event_24"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_map" />

</menu>