<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.project.latino.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_schools"
        android:name="com.project.latino.ui.fragments.SchoolFragment"
        android:label="@string/title_schools"
        tools:layout="@layout/schoolitemlayout" />

    <fragment
        android:id="@+id/navigation_clubs"
        android:name="com.project.latino.ui.fragments.ClubsFragment"
        android:label="@string/title_clubs"
        tools:layout="@layout/clubitemlayout" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.project.latino.ui.fragments.EventFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.project.latino.ui.fragments.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />
</navigation>